# concert_application_ws

./: .gitignore  .gitmodules  README.md  environment.sh
.devcontainer/: devcontainer.json
docker/: Dockerfile  docker-compose-nvidia.yml  docker-compose.yml  roser.yaml
src/_user_interface/: CMakeLists.txt  README.md  package.xml
src/_user_interface/bim_files/: Crane_Hall_CONCERT_drilling.ifc  IIT_Lab_Model.ifc  IcraDemo_Wall_Corner.ifc  IcraDemo_walls.ifc  IcraDemo_walls_and_doors.ifc  NOI_D3_FRAUNHOFERITALIA.ifc  krakow_usecase_bim.ifc  kranhalle.ifc
src/_user_interface/bim_files/drill_walls/: 1.txt  2.txt  3.txt  4.txt
src/_user_interface/config/: documenting.xml  drilling.xml  painting_icra_demo.xml  test_move_arm.xml
src/_user_interface/launch/: bringup.launch.py
src/_user_interface/rviz/: user_interface.rviz
src/concert_gui/: README.md
src/concert_gui/concert_main_gui/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.cfg
src/concert_gui/concert_main_gui/concert_main_gui/: __main__.py
src/concert_gui/concert_main_gui/config/gui_files/: CameraWidget.ui  ConcertRvizGui.ui  Main.ui  Main_drilling.ui  Main_transport.ui  RvizDrillingWidget.ui  RvizTransportWidget.ui  StartupGui.ui
src/concert_gui/concert_main_gui/config/rviz_files/: IIT_drilling_config.rviz  clean.rviz  drilling_config.rviz  transport_config.rviz
src/concert_gui/concert_main_gui/config/yaml_files/: IIT_gui_config.yaml  gui_config.yaml  transport_positions.yaml
src/concert_gui/concert_main_gui/launch/: bringup.launch.py
src/concert_gui/widgets/camera_widget/: CMakeLists.txt  README.md  package.xml
src/concert_gui/widgets/camera_widget/camera_widget/: camera_widget.py
src/concert_gui/widgets/rqt_rviz_drilling_widget/: CMakeLists.txt  README.md  package.xml  plugin.xml
src/concert_gui/widgets/rqt_rviz_drilling_widget/rqt_rviz_drilling_widget/: __init__.py  rviz_drilling_gui.py  rviz_drilling_widget.py
src/concert_gui/widgets/rqt_rviz_transport_widget/: CMakeLists.txt  README.md  package.xml  plugin.xml
src/concert_gui/widgets/rqt_rviz_transport_widget/rqt_rviz_transport_widget/: __init__.py  publish_transport_marker.py  rviz_transport_gui.py  rviz_transport_widget.py
src/concert_mission_generator/: CMakeLists.txt  Readme.md  package.xml
src/concert_mission_generator/config/: aruco_look_up_table.yaml  drill_walls.yaml
src/concert_mission_generator/scripts/: IIT_drilling_mission_generator.py  drilling_mission_generator.py  interactive_marker_base.py  send_behavior_tree_client.py  transport_mission_generator.py
src/concert_mission_generator/trees/: aruco_calibration_tree.xml  drilling.xml  drilling_sim.xml  mobile_base_position_refinement_tree.xml  transport.xml
src/concert_mission_generator/trees/iit/: drilling.xml  initialization.xml
src/rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
src/rviz_plugins/config/: test.rviz
src/rviz_plugins/include/: select_marker_tool.h
src/rviz_plugins/src/: select_marker_tool.cpp
src/waypoint_manager_msgs/: CMakeLists.txt  package.xml
src/waypoint_manager_msgs/action/: General.action
src/waypoint_manager_msgs/msg/: Action.msg  CartesianTarget.msg  Motion.msg  Target.msg
src/waypoint_manager_msgs/srv/: GetAction.srv  GetActionsList.srv  MotionTrigger.srv  WaypointLoad.srv  WaypointWrite.srv
src/waypoint_manager_msgs/utils/: wrappers.py
