<?xml version="1.0"?>
<package format="3">
  <name>rviz_plugins</name>
  <version>0.0.0</version>
  <description>
    A package with Rviz plugin used for interaction with geometries
  </description>
  <maintainer email="michael.terzer@fraunhofer.it">Michael Terzer</maintainer>
  <author>Tobit Flatscher</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>

  <depend>std_msgs</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>rviz_default_plugins</depend>
  <depend>qtbase5-dev</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>pluginlib</depend>
  <depend>concert_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugin_description.xml" />
  </export>
</package>